--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 /* Your CSS Code here. */
 .holder {
-    display:block;
+    display:flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
